--- a/applications/books/templates/book.html
+++ b/applications/books/templates/book.html
@@ -1,1 +1,7 @@
 {% load staticfiles %}
+<h2>Ficha de {{name}}</h2>
+<list>
+    <ul>Autor : {{author}}</ul>
+    <ul>Estado : {{state}}</ul>
+    <ul>Colección : {{collection}}</ul>
+</list>
