Functional Core. Books Can be created and Deleted. Collections too.

--- a/applications/books/templates/collections.html
+++ b/applications/books/templates/collections.html
@@ -6,3 +6,5 @@
         <br>Libros {{collection.count_books}} : {{collection.books}} </ul><br>
 {% endfor %}
 </list>
+<br>
+<a href="{% url 'index' %}">Menú principal</a>
