--- a/applications/books/templates/index.html
+++ b/applications/books/templates/index.html
@@ -3,10 +3,16 @@
 <br>
 <br>
 <list>
-<ul><a href="book/">Ver libros </a><br></ul>
-<ul><a href="collection/">Ver colecciones</a><br></ul>
-<ul><a>Agregar un libro</a></ul>
-<ul><a>Agregar una colleccion</a><br></ul>
+<ul><a href="{%url 'books' %}">Ver libros </a><br></ul>
+<ul><a href="{%url 'collections' %}">Ver colecciones</a><br></ul>
+<ul><a href="{%url 'newbook' %}">Agregar un libro</a></ul>
+<ul><a href="{%url 'newcollection' %}">Agregar una colleccion</a><br></ul>
 <ul><a>Buscar una coleccion</a><br></ul>
 <ul><a>Buscar un libro</a><br></ul>
 </list>
+<br>
+<br>
+<br>
+<br>
+<a href="www.github.com/kaozdl/bookieman/issues">Bugs</a>
+<a href="www.github.com/kaozdl">Otros proyectos</a>
