--- a/applications/books/templates/index.html
+++ b/applications/books/templates/index.html
@@ -14,5 +14,5 @@
 <br>
 <br>
 <br>
-<a href="www.github.com/kaozdl/bookieman/issues">Bugs</a>
-<a href="www.github.com/kaozdl">Otros proyectos</a>
+<a href="http://www.github.com/kaozdl/bookieman/issues" target=blank>Bugs</a>
+<a href="http://www.github.com/kaozdl" target=blank>Otros proyectos</a>
