--- a/applications/books/templates/bookTake.html
+++ b/applications/books/templates/bookTake.html
@@ -1,4 +1,4 @@
-<h1>Nuevo libro</h1>
+<h1>Prestar Libro</h1>
        <form method="POST" class="post-form">{% csrf_token %}
            {{ form.as_p }}
            <button type="submit" class="save btn btn-default">Guardar</button>
