Se pueden prestar y devolver libros

--- a/applications/books/templates/book.html
+++ b/applications/books/templates/book.html
@@ -4,12 +4,11 @@
     <ul>Autor : {{author}}</ul>
     <ul>Estado : {{state}}</ul>
     <ul>Colección : {{collection}}</ul>
-    {% if state == 'prestado' %}
-    <ul>Prestado a :</ul>
+    {% if state == 'Prestado' %}
+    <ul>Prestado a : {{taker}} </ul>
     {% endif %}
 
 </list>
-
 <p>----------------------------------------------</p>
 <list>
     <a href="{%url 'books' %}">Volver a la lista</a>
