--- a/applications/books/templates/book.html
+++ b/applications/books/templates/book.html
@@ -1,5 +1,6 @@
-{% load staticfiles %}
-<h2>Ficha de {{name}}</h2>
+{% extends "admin.html" %}
+{% block title %}<h2>Ficha de {{name}}</h2>{% endblock title %}
+{% block content %}
 <list>
     <ul>Autor : {{author}}</ul>
     <ul>Estado : {{state}}</ul>
@@ -14,3 +15,4 @@
     <a href="{%url 'books' %}">Volver a la lista</a>
     <a href="{% url 'index'%}">Volver al menú</a>
 </list>
+{% endblock content %}
