--- a/applications/books/templates/bookTake.html
+++ b/applications/books/templates/bookTake.html
@@ -1,7 +1,10 @@
-<h1>Prestar Libro</h1>
+{% extends "admin.html" %}
+{% block title %}<h1>Prestar Libro</h1>{% endblock title %}
+{% block content %}
        <form method="POST" class="post-form">{% csrf_token %}
            {{ form.as_p }}
            <button type="submit" class="save btn btn-default">Guardar</button>
        </form>
 <br>
 <a href="{% url 'index' %}">Menú principal</a>
+{% endblock content %}
