Edit Books and Bugfixes

--- a/applications/books/templates/index.html
+++ b/applications/books/templates/index.html
@@ -8,9 +8,7 @@
 <ul><a href="{%url 'books' %}">Ver libros </a><br></ul>
 <ul><a href="{%url 'collections' %}">Ver colecciones</a><br></ul>
 <ul><a href="{%url 'newbook' %}">Agregar un libro</a></ul>
-<ul><a href="{%url 'newcollection' %}">Agregar una colleccion</a><br></ul>
-<ul><a>Buscar una coleccion</a><br></ul>
-<ul><a>Buscar un libro</a><br></ul>
+<ul><a href="{%url 'newcollection' %}">Agregar una colección</a><br></ul>
 </list>
 <br>
 <br>
