--- a/applications/books/templates/admin.html
+++ b/applications/books/templates/admin.html
@@ -14,4 +14,10 @@
     {% include "footer.html" %}
 </div>
 </body>
-<script type="text/javascript" src="{{ STATIC_URL }}/thrid-parties/jquery.js">
+<script type="text/javascript" src="{{ STATIC_URL }}/static/thrid-parties/jquery.js">
+</script>
+{% if message %}
+<script type="text/javascript">
+    alert({{'message'}});
+</script>
+{% endif %}
