--- a/applications/books/templates/books.html
+++ b/applications/books/templates/books.html
@@ -7,10 +7,14 @@
 <list>
 {% for book in books %}
 <div style="background-color : #99a8c1">
-    <ul><a href="{%url 'book' book.id %}">{{book.name}}</a>
-    <button type="button" class="btn btn-primary">Prestar Libro<a href="{%url 'booktk' book.id%}"></a></button>
-    <button type="button" class="btn btn-primary">Devolver Libro<a href="{%url 'bookuntk' book.id%}"></a></button>
-    <button type="button" class="btn btn-danger">Borrar Libro<a href="{%url 'bookdlt' book.id%}"></a></button>
+    <ul><a href="{%url 'book' book.id %}"><button type="button" class="btn btn-default">{{book.name}}</button></a>
+    {% if book.taken == False %}
+    <a href="{%url 'booktk' book.id%}"><button type="button" class="btn btn-primary">Prestar Libro</button></a>
+    {% elif book.taken == True %}
+    <a href="{%url 'bookuntk' book.id%}"><button type="button" class="btn btn-primary">Devolver Libro</button></a>
+    {% endif %}
+    <a href="{%url 'editbook' book.id%}"><button type="button" class="btn btn-warning">Editar Libro</button></a>
+    <a href="{%url 'bookdlt' book.id%}"><button type="button" class="btn btn-danger">Borrar Libro</button></a>
         {% if book.taken == True %}
         <span>Prestado</span>
         {% endif %}
@@ -18,11 +22,8 @@
 </div>
 {% endfor %}
 </list>
-<br>
-<p>----------------------------------------------------------</p>
-<br>
-<list>
-    <a href="{%url 'books' %}">Volver a la lista</a>
-    <a href="{% url 'index'%}">Volver al menú</a>
-</list>
+<div style="text-align : center">
+    <a href="{%url 'books' %}"><button type="button" class="btn btn-primary">Volver a la lista</button></a>
+    <a href="{% url 'index'%}"><button type="button" class="btn btn-primary">Volver al menú</a></button></a>
+</div>
 {% endblock content %}
