--- a/applications/books/templates/footer.html
+++ b/applications/books/templates/footer.html
@@ -1,5 +1,7 @@
 
 {% block footer %}
 <a href="http://www.github.com/kaozdl/bookieman/issues" target=blank>Bugs</a>
-<a href="http://www.github.com/kaozdl" target=blank>Otros proyectos</a>
+<a href="http://www.github.com/kaozdl" target=blank>Otros proyectos</a><br>
+<a href="{%url 'logout' %}"><button type="button" class="btn btn-danger pullcenter">Cerrar Sesion</button></a>
+
 {% endblock footer %}
