Collection edit in progress "stable" version to host on apacheserver

--- a/applications/books/templates/admin.html
+++ b/applications/books/templates/admin.html
@@ -1,6 +1,6 @@
 <head>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}/static/thrid-parties/bootstrap-3.3.7-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}/static/thrid-parties/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
 </style>
 </head>
 <body>
