--- a/applications/books/templates/collection.html
+++ b/applications/books/templates/collection.html
@@ -3,7 +3,13 @@
 {% block content %}
 <list>
 {% for book in collection %}
-    <ul>{{book}}</ul><br>
+    <ul>
+        <a href="{%url 'book' book.id %}">
+        <button type="button" class="btn btn-default"><span>{{book}}</span></button></a>
+         {% if book.place_in_collection %}            
+            <span>{{book.place_in_collection}}/{{count}}</span>
+        {% endif %}
+    </ul><br>
 {% endfor %}
 </list>
 {% endblock content %}
