--- a/applications/books/templates/bookEdit.html
+++ b/applications/books/templates/bookEdit.html
@@ -9,7 +9,7 @@
     </list>
 </div>
        <form method="POST" class="post-form">{% csrf_token %}
-           {{ form.as_p }}
+           {# {{ form.as_p }} #}
            <button type="submit" class="save btn btn-default">Guardar</button>
        </form>
 <br>
