--- a/applications/books/templates/admin.html
+++ b/applications/books/templates/admin.html
@@ -1,21 +1,49 @@
 <head>
     <link rel="stylesheet" href="{{STATIC_URL}}/static/thrid-parties/bootstrap-3.3.7-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="{{STATIC_URL}}/static/thrid-parties/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="{{STATIC_URL}}/static/css/core.css">
 </style>
 </head>
 <body>
-<div id="title" class="jumbotron text-center">
+  <!-- MENU -->
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="#">About</a>
+    <a href="#">Services</a>
+    <a href="#">Clients</a>
+    <a href="#">Contact</a>
+  </div>
+  <div id="title" class="barra_titulo text-center">
+    <!-- Use any element to open the sidenav -->
+    <span onclick="openNav()" class="glyphicon glyphicon-menu-hamburger "></span>
     {% block title %}{% endblock title %}
-</div>
-<div id="content">
-    {% block content %}{% endblock content %}
-</div>
-<div id="footer" style="text-align:center; background-color">
-    {% include "footer.html" %}
-</div>
+  </div>
+  <!-- / MENU -->
+
+  <div id="main">
+    <div id="content">
+        {% block content %}{% endblock content %}
+    </div>
+    <div id="footer" style="text-align:center; background-color">
+        {% include "footer.html" %}
+    </div>
+  </div>
 </body>
 <script type="text/javascript" src="{{ STATIC_URL }}/static/thrid-parties/jquery.js">
 </script>
+
+<script>
+/* Set the width of the side navigation to 250px */
+function openNav() {
+  document.getElementById("mySidenav").style.width = "250px";
+}
+
+/* Set the width of the side navigation to 0 */
+function closeNav() {
+  document.getElementById("mySidenav").style.width = "0";
+}
+</script>
+
 {% if message %}
 <script type="text/javascript">
     alert({{'message'}});
